--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <script data-cfasync="false" type="text/javascript"
+src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
 </body>
 </html>
